# nodeeditor

./: CMakeLists.txt
examples/gst_node/: CMakeLists.txt  gst_nodes.cpp  gst_nodes.hpp  main.cpp
